Changed set signature